--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-requests==2.31.0
-urllib3==1.26.18
+requests==2.32.3
 pdfplumber==0.11.4
+opencv-python-headless==4.10.0.84
+pdf2image==1.17.0
+pytesseract==0.3.10
+Pillow==10.4.0
