--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-requests==2.32.3
-pdfplumber==0.11.4
-pdf2image==1.17.0
-pytesseract==0.3.13
-opencv-python-headless==4.10.0.84
-Pillow==10.4.0
-numpy==1.26.4
-python-multipart==0.0.9
+fastapi
+uvicorn[standard]
+pytesseract
+pdf2image
+pillow
+opencv-python-headless
+numpy
+pyjwt          
+python-multipart
+openai
